--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,26 @@
           xmlns:tools="http://schemas.android.com/tools">
 
     <application
-            android:allowBackup="true"
-            android:dataExtractionRules="@xml/data_extraction_rules"
-            android:fullBackupContent="@xml/backup_rules"
-            android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.DandDFront"
+        tools:targetApi="31">
+        <activity
+            android:name=".CharacterShowActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".CharacterCreationActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.DandDFront"
-            tools:targetApi="31">
-        <activity
-                android:name=".CharacterCreationActivity"
-                android:exported="false"/>
-        <activity
-                android:name=".MainActivity"
-                android:exported="true"
-                android:label="@string/app_name"
-                android:theme="@style/Theme.DandDFront">
+            android:theme="@style/Theme.DandDFront">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
